# dispel

./: Cargo.toml  Makefile  README.md
docs/superpowers/specs/: 2026-03-12-memory-detection-design.md
src/: allowlist.rs  cli.rs  ir.rs  lib.rs  main.rs  remediate.rs
src/output/: human.rs  json.rs  mod.rs  syslog.rs
src/platform/: bsd.rs  linux.rs  mod.rs  windows.rs
src/scan/: behavior.rs  memory.rs  mod.rs  net.rs  persist.rs  proc.rs
src/signatures/: hashes.rs  mod.rs  strings.rs
src/watch/: mod.rs
tests/: allowlist_test.rs  behavior_test.rs  binary_scan_test.rs  cli_test.rs  integration_test.rs  linux_proc_test.rs  memory_test.rs  net_active_test.rs  net_passive_test.rs  output_test.rs  persist_test.rs  scoring_test.rs  signatures_test.rs  validation_test.rs
